--- a/pokedex/package.json
+++ b/pokedex/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "e2e":"npx playwright test"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.3",
@@ -23,8 +24,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@playwright/test": "^1.48.2",
     "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.14",
+    "@types/node": "^22.9.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
