--- a/pokedex/package.json
+++ b/pokedex/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview",
     "test": "vitest",
     "coverage": "vitest run --coverage",
-    "e2e":"npx playwright test"
+    "e2e": "npx playwright test",
+    "e2e-ui": "npx playwright test --ui"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.3",
